@@ -2,6 +2,12 @@
 
 * GDB-like signal handling courtesy of Matt Fleming
 
+* Add hard kill. May be needed for thread debugging
+
+* Start thread debugging: 
+    info thread [thread-name] [verbose] - show thread info
+    thread *thread-name*                - switches thread
+
 1.17 2006-07-29
 * Allow entry to the debugger without a script name.
 
